--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,9 +11,11 @@ spring:
 management:
   endpoint:
     health:
-      probes:
-        enabled: true
+     show-details: always
+  health:
+    readinessState:
+      enabled: true
   endpoints:
     web:
       exposure:
-        include: health,info
+        include: "health,info"
